--- a/index.html
+++ b/index.html
@@ -11,19 +11,29 @@
     <div id="container">
         <header id="header">CONSULTING <nav>
             <ul class="menu">
-                <li><a href="#">about us</a></li>
-                <li><a href="#">portfolio</a></li>
-                <li><a href="#">clients</a></li>
-                <li><a href="#">contact us</a></li>
+                <li><a href="about.html">about us</a></li>
+                <li><a href="portfolio.html">portfolio</a></li>
+                <li><a href="clients.html">clients</a></li>
+                <li><a href="contact.html">contact us</a></li>
             </ul>
          </nav></header>
-		<div class="box box2">Box2</div>
+         <div class="box box1">We make your dreams come true! :D</div>
+		<div class="box box2">
+            <img src="img/background.jpg">
+            <div class="text-block">
+                <h4>the crew</h4>
+                <p>fist bumps before work </p>
+              </div>
+        </div>
+        <div id="navboxes">
+            <a href="about.html"><div class="box navbox1">About us</div></a>
+            <a href="portfolio.html"><div class="box navbox2">Portfolio</div></a>
+            <a href="clients.html"><div class="box navbox3">Clients</div></a>
+            <a href="contact.html"><div class="box navbox4">Contact us</div></a>
+        </div>
 		<footer id="footer">
-			<div class="box footersection"><div class="icons"><img src="img/about-icon.png"> About us</div></div>
-			<div class="box footersection"><div class="icons"><img src="img/about-icon.png"> About us</div></div>
-			<div class="box footersection"><div class="icons"><img src="img/about-icon.png"> About us</div></div>
-			<div class="box footersection"><div class="icons"><img src="img/about-icon.png"> About us</div></div>
-		</footer>
-	</div>
+            &#169; Consulting Company 2022
+            </footer>
+        </div>
 </body>
 </html>
