--- a/index.html
+++ b/index.html
@@ -9,31 +9,41 @@
 </head>
 <body>
     <div id="container">
-        <header id="header">CONSULTING <nav>
-            <ul class="menu">
-                <li><a href="about.html">about us</a></li>
-                <li><a href="portfolio.html">portfolio</a></li>
-                <li><a href="clients.html">clients</a></li>
-                <li><a href="contact.html">contact us</a></li>
-            </ul>
-         </nav></header>
-         <div class="box box1">We make your dreams come true! :D</div>
+        <header id="header">CONSULTING 
+            <nav>
+                <ul class="menu">
+                    <li><a href="about.html">about us</a></li>
+                    <li><a href="portfolio.html">portfolio</a></li>
+                    <li><a href="clients.html">clients</a></li>
+                    <li><a href="contact.html">contact us</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="box box1">We make your dreams come true! :D</div>
 		<div class="box box2">
             <img src="img/background.jpg">
             <div class="text-block">
                 <h4>the crew</h4>
                 <p>fist bumps before work </p>
-              </div>
+            </div>
         </div>
         <div id="navboxes">
-            <a href="about.html"><div class="box navbox1">About us</div></a>
-            <a href="portfolio.html"><div class="box navbox2">Portfolio</div></a>
-            <a href="clients.html"><div class="box navbox3">Clients</div></a>
-            <a href="contact.html"><div class="box navbox4">Contact us</div></a>
+            <a href="about.html"><div class="box navbox1">About us
+                <p>Our story</p>
+            </div></a>
+            <a href="portfolio.html"><div class="box navbox2">Portfolio
+                <p>Our work</p>
+            </div></a>
+            <a href="clients.html"><div class="box navbox3">Clients
+                <p>Our clients</p>
+            </div></a>
+            <a href="contact.html"><div class="box navbox4">Contact us
+                <p>Contact us here</p>
+            </div></a>
         </div>
 		<footer id="footer">
             &#169; Consulting Company 2022
-            </footer>
-        </div>
+        </footer>
+    </div>
 </body>
 </html>
