--- a/clients.html
+++ b/clients.html
@@ -28,7 +28,7 @@
             <section class="right">
 
                 <p>
-                    At Bain, bold thinking, inspired people and a passion for results come together for extraordinary impact. We work with clients who do not hide from the future but want to define it.
+                    At Consulting, bold thinking, inspired people and a passion for results come together for extraordinary impact. We work with clients who do not hide from the future but want to define it.
                     <br>
                      Learn more by reading some of our client results stories.
                 </p>
