port + mockup / ej färdigt ej responsivt

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/portfolio.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/clients.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <title>Portfolio</title>
 </head>
 <body>
+    <header id="header">Portfolio<nav>
+        <ul class="menu">
+       <li><a href="about.html">about us</a></li>
+       <li><a href="portfolio.html">portfolio</a></li>
+       <li><a href="clients.html">clients</a></li>
+       <li><a href="contact.html">contact us</a></li>
+   </ul>
+    </nav></header>    
     
+    
+            <div id="navboxes">
+                <a href="about.html"><div class="box navbox1">About us</div></a>
+                <a href="portfolio.html"><div class="box navbox2">Portfolio</div></a>
+                <a href="clients.html"><div class="box navbox3">Clients</div></a>
+                <a href="contact.html"><div class="box navbox4">Contact us</div></a>
+            </div>
+
+
+
+        <div class="grid">
+            <div class="grid-item f-end-1 ">
+             <div class="image-holder">
+               <img class="image" src="https://scontent-arn2-1.xx.fbcdn.net/v/t1.6435-9/83747958_608482799947632_5244784822290743296_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=syB78VOBW3oAX98I3Ev&_nc_ht=scontent-arn2-1.xx&oh=00_AT_Y7CvzSDYjYsaDtzc39gFJ8OAFuGOp1T-ZKyGfetQKbg&oe=6364832A" />
+             </div>
+            </div>
+            <div class="grid-item b-end-2 ">
+              <div class="image-holder">
+               <img class="image" src="https://scontent-arn2-2.xx.fbcdn.net/v/t1.6435-9/83645383_608482836614295_2811345120761217024_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=vIKLaYwiP_UAX8zXrJZ&_nc_ht=scontent-arn2-2.xx&oh=00_AT9eh7Rob2IrZThCixo3-DU2w7KtkI-q5qS6uSowjfyWcg&oe=63637B5C" />
+             </div>
+            </div>
+            <div class="grid-item grid-item-3">
+              <div class="image-holder">
+               <img class="image madinah" src="https://images.unsplash.com/photo-1591604129939-f1efa4d9f7fa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80" />
+             </div>
+            </div>
+            <div class="grid-item full-stack-4 "><div class="image-holder">
+               <img class="image" src="https://avatars.githubusercontent.com/u/92217965?v=4" />
+             </div></div>
+            <div class="grid-item UX "><div class="image-holder">
+               <img class="image" src="https://www.asocietygroup.com/hs-fs/hubfs/skapa-v%C3%A4rde-ux-design.jpg?width=590&name=skapa-v%C3%A4rde-ux-design.jpg" />
+             </div></div>
+          </div>
+ 
+
+
+		<footer id="footer">
+            &#169; Consulting Company 2022
+            </footer>
+        </div> 
+    </div>
 </body>
 </html>
